[package]
name = "pulsar-client"
version = "0.1.0"
edition = "2021"

[dependencies]
pulsar = "5.1"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
log = "0.4"
futures = "0.3"
clap = { version = "4.3", features = ["derive"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
